--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
     {{ content }}
 
     <div class="footer">
-        &copy;2014 The FreeDPI Project
+        &copy;The FreeDPI Project since 2014
     </div>
 </div>
 <script src="http://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
